<resources>
    <string name="app_name">Attandance Management System</string>
    <string name="BE">BE</string>
    <string name="TE">TE</string>
    <string name="SE">SE</string>
    <string name="cse">CSE</string>
    <string name="logo">Logo</string>
    <string name="civil">Civil</string>
    <string name="mech">Mech</string>
    <string name="e_tc"><![CDATA[E&TC]]></string>
    <string name="mba">MBA</string>
    <string name="login">Log In</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign Up</string>
    <string name="personal_details">Personal Details :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="working_details">Working Details :</string>
    <string name="submit">Submit</string>
    <string name="subject_handling">Subject Handling</string>
    <string name="class_handled">Class handled</string>
    <string name="new_users_request">Users List</string>
    <string name="delete_a_user">Delete a User</string>

    <string name="First_page_Name">Choose Department</string>
    <string name="Log_in_page_Name">Log In</string>
    <string name="Sign_in_page_Name">Sign In</string>
    <string name="title_activity_drawer">Attendance Management System</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio_android_com">admin@dietms.com</string>
    <string name="diems_aurangabad">DIEMS, Aurangabad</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="take">Take</string>
    <string name="date">Date(dd/mm/yy)</string>
    <string name="update_users">Update Users</string>
    <string name="access_permissions">Give Access Permissions</string>
    <string name="assign_roll">Assign Roll</string>
    <string name="delete">Delete</string>
    <string name="denyaccess">DenyAccess</string>
    <string name="class_teacher">Class Teacher</string>
    <string name="staff">Staff</string>
    <string name="assign_subject">Assign Subject</string>
    <string name="assign_practical">Assign Practical</string>
    <string name="add_students_info">Add Students Info</string>


    <string-array name="classList">
        <item>select class</item>
        <item>BE</item>
        <item>TE</item>
        <item>SE</item>
    </string-array>

    <string-array name="batchList">
        <item>select batch</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
    </string-array>

    <string-array name="subList">
        <item>select sub</item>
        <item>Sub1</item>
        <item>Sub2</item>
        <item>Sub3</item>
    </string-array>
    <string-array name="pracList">
        <item>select prac</item>
        <item>Prac1</item>
        <item>Prac2</item>
        <item>Prac3</item>
    </string-array>
</resources>
