<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/staffpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="330dp"
        android:layout_height="130dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/TakeAtt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/diems_logo" />

    <TextView
        android:id="@+id/TakeAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="50dp"
        android:onClick="takeAttendance"
        android:text="@string/take_attendance"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EditAtt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/EditAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="105dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="59dp"
        android:onClick="EditAttendance"
        android:text="@string/edit_attendance"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ViewAtt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TakeAtt" />

    <TextView
        android:id="@+id/ViewAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:onClick="viewAttendance"
        android:text="@string/view_attendance"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditAtt" />

</android.support.constraint.ConstraintLayout>