<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <EditText
        android:id="@+id/Uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Passwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="130dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="156dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/Uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/diems_logo" />

    <EditText
        android:id="@+id/Passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Uname" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:textSize="50sp"
        android:theme="@style/AlertDialog.AppCompat.Light"
        app:layout_constraintBottom_toTopOf="@+id/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/Passwd" />

    <Button
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="145dp"
        android:layout_marginStart="147dp"
        android:background="@android:color/transparent"
        android:onClick="loginClick"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/Sign_In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/transparent"
        android:onClick="signInClick"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn" />

</android.support.constraint.ConstraintLayout>